--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,32 @@
+body {
+  font-family: arial, sans-serif;
+}
+.weather-app {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 30px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
+}
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  color: #878787;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+  line-height: 19px;
+}
