--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,7 @@
 body {
   font-family: arial, sans-serif;
 }
-.weather-app {
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 30px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
-}
+
 h1 {
   color: #878787;
   font-size: 24px;
@@ -19,6 +13,8 @@ h1 {
 ul {
   margin: 0;
   padding: 0;
+  .weather-app-wrapper {
+  }
 }
 
 li {
@@ -29,4 +25,34 @@ li {
   padding: 0;
   font-weight: 100;
   line-height: 19px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 40px auto;
+}
+.weather-app {
+  padding: 30px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-temperature img {
+  margin-right: 5px;
+  margin-top: -25px;
+  height: 64px;
+  width: 64px;
+  top: -50px;
+}
+.weather-temperature small {
+  color: black;
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400px;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -32px;
 }
