--- a/src/style.css
+++ b/src/style.css
@@ -23,9 +23,13 @@ li {
   font-size: 16px;
   margin: 0;
   padding: 0;
-  text-transform: capitalize;
+
   font-weight: 100;
   line-height: 19px;
+}
+
+li::first-letter {
+  text-transform: capitalize;
 }
 .weather-app-wrapper {
   max-width: 600px;
