--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,13 @@ li::first-letter {
   font-size: 16px;
   top: -32px;
 }
+
+.weather-temperature .active {
+  color: #878787;
+  cursor: default;
+  text-decoration: none;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
