--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,6 @@ h1 {
 ul {
   margin: 0;
   padding: 0;
-  .weather-app-wrapper {
-  }
 }
 
 li {
@@ -70,4 +68,19 @@ li::first-letter {
 
 .weather-temperature .active:hover {
   text-decoration: none;
+}
+.weahter-forcast {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+.weahter-forcast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+.weather-forcast-max {
+  font-size: 13px;
+}
+.weather-forcast-min {
+  opacity: 0.5;
 }
