--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 body {
   font-family: arial, sans-serif;
-  background-color: #878787;
+  background-color: #f2f2f2;
 }
 
 h1 {
-  color: #878787;
-  font-size: 24px;
+  color: white;
+  font-size: 34px;
   font-weight: 100;
   line-height: 28px;
   margin-bottom: 0;
@@ -18,10 +18,10 @@ ul {
 
 li {
   list-style: none;
-  color: #878787;
-  font-size: 16px;
+  color: white;
+  font-size: 20px;
   margin: 0;
-  padding: 0;
+  padding: 5px;
 
   font-weight: 100;
   line-height: 19px;
@@ -36,7 +36,7 @@ li::first-letter {
 }
 .weather-app {
   padding: 30px;
-  border: 1px solid #dadde1;
+  border: 1px solid white;
   border-radius: 5px;
 }
 .overview {
@@ -45,12 +45,12 @@ li::first-letter {
 .weather-temperature img {
   margin-right: 5px;
   margin-top: -25px;
-  height: 64px;
-  width: 64px;
+  height: 100px;
+  width: 100px;
   top: -50px;
 }
 .weather-temperature small {
-  color: black;
+  color: white;
   font-size: 64px;
   line-height: 1;
   font-weight: 400px;
@@ -59,10 +59,14 @@ li::first-letter {
   position: relative;
   font-size: 16px;
   top: -32px;
+  text-decoration: none;
+}
+.weather-temperature .noActive {
+  text-decoration: none;
 }
 
 .weather-temperature .active {
-  color: #878787;
+  color: #dadde1;
   cursor: default;
   text-decoration: none;
 }
@@ -70,12 +74,14 @@ li::first-letter {
 .weather-temperature .active:hover {
   text-decoration: none;
 }
-.weahter-forcast {
+.card {
   margin-top: 20px;
+  padding-top: 5px;
+  padding-top: 5px;
   text-align: center;
   color: black;
-  background-color: lightcyan;
-  border-radius: 5px;
+  background-color: white;
+  border-radius: 8px;
 }
 .weahter-forcast-date {
   font-size: 16px;
